use a proxy instead of impelmenting OIDC internally
