# openapi/api/api.generated.go
@@ -211,12 +211,6 @@ type Tokenmap struct {
 // Uuid defines model for uuid.
 type Uuid = string
 
-// GetAuthenticationParams defines parameters for GetAuthentication.
-type GetAuthenticationParams struct {
-	// RequestedUri URI from where the client comes from, encoded in BASE64
-	RequestedUri string `form:"requested_uri" json:"requested_uri"`
-}
-
 // PostCoreParams defines parameters for PostCore.
 type PostCoreParams struct {
 	Token *Token `form:"token,omitempty" json:"token,omitempty"`
@@ -259,15 +253,6 @@ type GetLogoutParams struct {
 	Token *Token `form:"token,omitempty" json:"token,omitempty"`
 }
 
-// GetRedirectCallParams defines parameters for GetRedirectCall.
-type GetRedirectCallParams struct {
-	// Code authorization code generated by OIDC
-	Code string `form:"code" json:"code"`
-
-	// State URI to which the client must be redirected to, encoded in BASE64
-	State string `form:"state" json:"state"`
-}
-
 // PostCoreJSONRequestBody defines body for PostCore for application/json ContentType.
 type PostCoreJSONRequestBody = CoreParams
 
@@ -279,9 +264,6 @@ type PostCoreIdUPFJSONRequestBody = Upf
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// Redirection to the OIDC URL to generate authentication code
-	// (GET /authentication)
-	GetAuthentication(w http.ResponseWriter, r *http.Request, params GetAuthenticationParams)
 	// Create a core
 	// (POST /core/)
 	PostCore(w http.ResponseWriter, r *http.Request, params PostCoreParams)
@@ -309,9 +291,6 @@ type ServerInterface interface {
 	// Logout the user
 	// (GET /logout)
 	GetLogout(w http.ResponseWriter, r *http.Request, params GetLogoutParams)
-	// Finalize the auhtentication with OIDC based on authentication code
-	// (GET /redirect-call)
-	GetRedirectCall(w http.ResponseWriter, r *http.Request, params GetRedirectCallParams)
 	// Generate and return an JWT API token
 	// (GET /token)
 	GetToken(w http.ResponseWriter, r *http.Request)
@@ -325,41 +304,6 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc func(http.Handler) http.Handler
-
-// GetAuthentication operation middleware
-func (siw *ServerInterfaceWrapper) GetAuthentication(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params GetAuthenticationParams
-
-	// ------------- Required query parameter "requested_uri" -------------
-
-	if paramValue := r.URL.Query().Get("requested_uri"); paramValue != "" {
-
-	} else {
-		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "requested_uri"})
-		return
-	}
-
-	err = runtime.BindQueryParameter("form", true, true, "requested_uri", r.URL.Query(), &params.RequestedUri)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "requested_uri", Err: err})
-		return
-	}
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetAuthentication(w, r, params)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
 
 // PostCore operation middleware
 func (siw *ServerInterfaceWrapper) PostCore(w http.ResponseWriter, r *http.Request) {
@@ -710,56 +654,6 @@ func (siw *ServerInterfaceWrapper) GetLogout(w http.ResponseWriter, r *http.Requ
 	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
-// GetRedirectCall operation middleware
-func (siw *ServerInterfaceWrapper) GetRedirectCall(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params GetRedirectCallParams
-
-	// ------------- Required query parameter "code" -------------
-
-	if paramValue := r.URL.Query().Get("code"); paramValue != "" {
-
-	} else {
-		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "code"})
-		return
-	}
-
-	err = runtime.BindQueryParameter("form", true, true, "code", r.URL.Query(), &params.Code)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "code", Err: err})
-		return
-	}
-
-	// ------------- Required query parameter "state" -------------
-
-	if paramValue := r.URL.Query().Get("state"); paramValue != "" {
-
-	} else {
-		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "state"})
-		return
-	}
-
-	err = runtime.BindQueryParameter("form", true, true, "state", r.URL.Query(), &params.State)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "state", Err: err})
-		return
-	}
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetRedirectCall(w, r, params)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r.WithContext(ctx))
-}
-
 // GetToken operation middleware
 func (siw *ServerInterfaceWrapper) GetToken(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -888,8 +782,6 @@ func HandlerWithOptions(si ServerInterface, options GorillaServerOptions) http.H
 		ErrorHandlerFunc:   options.ErrorHandlerFunc,
 	}
 
-	r.HandleFunc(options.BaseURL+"/authentication", wrapper.GetAuthentication).Methods("GET")
-
 	r.HandleFunc(options.BaseURL+"/core/", wrapper.PostCore).Methods("POST")
 
 	r.HandleFunc(options.BaseURL+"/core/{id}", wrapper.DeleteCoreId).Methods("DELETE")
@@ -907,8 +799,6 @@ func HandlerWithOptions(si ServerInterface, options GorillaServerOptions) http.H
 	r.HandleFunc(options.BaseURL+"/healthz", wrapper.GetHealthz).Methods("GET")
 
 	r.HandleFunc(options.BaseURL+"/logout", wrapper.GetLogout).Methods("GET")
-
-	r.HandleFunc(options.BaseURL+"/redirect-call", wrapper.GetRedirectCall).Methods("GET")
 
 	r.HandleFunc(options.BaseURL+"/token", wrapper.GetToken).Methods("GET")
 
