# openapi/api/api.yaml
@@ -20,53 +20,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Empty"
-  /authentication:
-    get:
-      summary: Redirection to the OIDC URL to generate authentication code
-      description: Redirection to the OIDC URL to generate authentication code
-      parameters:
-        - in: query
-          description: URI from where the client comes from, encoded in BASE64
-          name: requested_uri
-          schema:
-            type: string
-          required: true 
-
-      responses:
-        '302':    # status code
-          description: URL to be redirected to in order to get authenticated
-
-  /redirect-call:
-    get:
-      summary: Finalize the auhtentication with OIDC based on authentication code
-      description: Finalize the auhtentication with OIDC based on authentication code
-      parameters:
-        - in: query
-          name: code
-          description: authorization code generated by OIDC
-          schema:
-            type: string
-          required: true
-        - in: query
-          description: URI to which the client must be redirected to, encoded in BASE64
-          name: state
-          schema:
-            type: string
-          required: true
-      responses:
-        '302':    # status code
-          description: Redirected to the requested URI
-          headers:
-            Set-Cookie:
-              description: the OIDC authentication cookie, called `token`
-              schema:
-                $ref: '#/components/schemas/token'
-        '500':
-          description: On error
-          content:
-            text/plain:
-              schema:
-                type: string
                 
   /token:
     get:
